--- a/assets/scss/components/menu/_recent_order_area.scss
+++ b/assets/scss/components/menu/_recent_order_area.scss
@@ -26,13 +26,17 @@
     display: flex;
   }
   .recent-menu-item {
+    position: relative;
     box-sizing: content-box;
-    padding-left: 16px;
+    padding-right: 16px;
     width: 80px;
     text-align: center;
     &.is-ordered {
-      padding-right: 16px;
+      padding-left: 16px;
       border-right: 1px solid $booking-color-bg102;
+      & + .recent-menu-item {
+        padding-left: 16px;
+      }
     }
     &:last-child {
       padding-right: $m-padding;
@@ -68,8 +72,8 @@
 
   .badge-cart {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    top: 50px;
+    right: 16px;
     display: flex;
     padding: 6px;
     border: 1px solid $booking-color-border150;
