--- a/assets/scss/abstracts/_variables_color.scss
+++ b/assets/scss/abstracts/_variables_color.scss
@@ -269,3 +269,4 @@ $booking-color-link-visited: #99209b;
 $booking-color-bg2-rgb: rgba(255, 255, 255, 0);
 
 $point-color:#ff3d3b;
+$green: #01d760;
