--- a/assets/scss/abstracts/_mixin_common.scss
+++ b/assets/scss/abstracts/_mixin_common.scss
@@ -14,3 +14,9 @@
   -webkit-box-orient: vertical;  /* autprefixer: off */
 }
 
+@mixin common-inner {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 720px;
+}
+
