--- a/assets/scss/pages/_order_page.scss
+++ b/assets/scss/pages/_order_page.scss
@@ -20,3 +20,17 @@
   background-color: #ff61a7;
   color: #fff;
 }
+
+.dimmed-layer {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(#000,0.8);
+  z-index: 9999;
+  &.light {
+    background-color: rgba(#000,0.4);
+    
+  }
+}
