--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -492,6 +492,59 @@ body.scroll-off {
   color: #333;
 }
 
+.go-to-top {
+  padding: 16px 0 32px;
+  background-color: #fff;
+  text-align: center;
+}
+
+.go-to-top .link {
+  display: inline-block;
+  padding: 8px 20px;
+  border-radius: 20px;
+  border: 1px solid #e5e5e5;
+  background-color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+  color: #666;
+  -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.04);
+          box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.04);
+  text-transform: uppercase;
+}
+
+.go-to-top .ico-up {
+  position: relative;
+  display: inline-block;
+  margin-left: 4px;
+  width: 10px;
+  height: 10px;
+}
+
+.go-to-top .ico-up::before {
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  border-top: 2px solid #666;
+  border-left: 2px solid #666;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.go-to-top .ico-up::after {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 50%;
+  width: 2px;
+  height: 9px;
+  background-color: #666;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
 .menu-detail-area {
   background-color: #fff;
 }
@@ -1151,59 +1204,6 @@ body.scroll-off {
   color: #242424;
 }
 
-.go-to-top {
-  padding: 16px 0 32px;
-  background-color: #fff;
-  text-align: center;
-}
-
-.go-to-top .link {
-  display: inline-block;
-  padding: 8px 20px;
-  border-radius: 20px;
-  border: 1px solid #e5e5e5;
-  background-color: #fff;
-  font-size: 14px;
-  font-weight: 700;
-  color: #666;
-  -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.04);
-          box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.04);
-  text-transform: uppercase;
-}
-
-.go-to-top .ico-up {
-  position: relative;
-  display: inline-block;
-  margin-left: 4px;
-  width: 10px;
-  height: 10px;
-}
-
-.go-to-top .ico-up::before {
-  content: '';
-  position: absolute;
-  top: 4px;
-  left: 50%;
-  width: 5px;
-  height: 5px;
-  border-top: 2px solid #666;
-  border-left: 2px solid #666;
-  -webkit-transform: translate(-50%, -50%) rotate(45deg);
-          transform: translate(-50%, -50%) rotate(45deg);
-}
-
-.go-to-top .ico-up::after {
-  content: '';
-  position: absolute;
-  top: 2px;
-  left: 50%;
-  width: 2px;
-  height: 9px;
-  background-color: #666;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-}
-
 .order-info-area {
   padding: 10px 18px 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.04);
@@ -1744,7 +1744,6 @@ body.scroll-off {
 }
 
 .amount-select {
-  margin-top: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1773,14 +1772,15 @@ body.scroll-off {
   color: #333;
 }
 
-.amount-select .btn-minus:enabled,
-.amount-select .btn-plus:enabled {
+.amount-select .btn-minus.enabled,
+.amount-select .btn-plus.enabled {
   border-color: #00d780;
   background-color: #00d780;
   color: #fff;
 }
 
-.amount-select .btn-minus:disabled,
+.amount-select .btn-minus.disabled, .amount-select .btn-minus:disabled,
+.amount-select .btn-plus.disabled,
 .amount-select .btn-plus:disabled {
   color: #eee;
 }
@@ -1838,10 +1838,287 @@ body.scroll-off {
   color: #c9c9c9;
 }
 
+.order-form-area .page-title-area {
+  height: 105px;
+  background-image: linear-gradient(254deg, #3accff, #2cec88);
+}
+
+.order-form-area .page-title-area .title {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 56px;
+  font-size: 20px;
+  font-weight: 700;
+  color: #fff;
+  background-image: linear-gradient(264deg, #3accff, #2cec88);
+}
+
+.order-form-area .page-title-area .btn-close {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 56px;
+  height: 56px;
+}
+
+.order-form-area .page-title-area .btn-close .ico-close {
+  width: 18px;
+}
+
+.order-content {
+  margin: -40px 10px 0;
+}
+
+.order-content .common-inner {
+  position: relative;
+  background-color: #fff;
+}
+
+.order-content .common-inner::before, .order-content .common-inner::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background: url("../images/bg-pattern.png") repeat-x;
+  background-size: auto 5px;
+}
+
+.order-content .common-inner::before {
+  top: -5px;
+}
+
+.order-content .common-inner::after {
+  bottom: -5px;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.order-content .order-content-top {
+  position: relative;
+  padding: 26px 18px 24px;
+}
+
+.order-content .order-content-top::after {
+  content: '';
+  position: absolute;
+  top: 26px;
+  right: 18px;
+  width: 83px;
+  height: 83px;
+  border-radius: 100%;
+  background: url("http://via.placeholder.com/83") no-repeat;
+}
+
+.order-content .order-content-top .title {
+  line-height: 1.2;
+  font-size: 20px;
+  font-weight: 700;
+  color: #01d760;
+}
+
+.order-content .order-content-top .desc {
+  margin-top: 8px;
+  line-height: 1.2;
+  font-size: 14px;
+  font-weight: 500;
+  color: #333;
+}
+
+.order-content .order-content-top .count {
+  margin-top: 8px;
+  line-height: 1.2;
+  font-size: 14px;
+  color: #666;
+  letter-spacing: -0.4px;
+}
+
+.order-content .order-content-body {
+  border-top: 1px dashed #e5e5e5;
+}
+
+.order-content .order-content-body .no-order {
+  padding: 70px 0;
+  text-align: center;
+}
+
+.order-content .order-content-body .no-order .txt {
+  margin-top: 6px;
+  font-size: 14px;
+  color: #8f8f8f;
+}
+
+.order-content .order-content-body .menu-list {
+  padding: 0 18px;
+}
+
+.order-content .order-content-body .menu-item {
+  position: relative;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 22px 18px;
+}
+
+.order-content .order-content-body .menu-item .menu-name-group {
+  padding-right: 40px;
+}
+
+.order-content .order-content-body .menu-item .menu-name {
+  line-height: 23px;
+  font-size: 18px;
+}
+
+.order-content .order-content-body .menu-item .menu-desc {
+  margin-top: 2px;
+}
+
+.order-content .order-content-body .menu-item .btn-option {
+  display: inline-block;
+  margin-top: 8px;
+  padding: 0 6px;
+  line-height: 20px;
+  border-radius: 3px;
+  border: 1px solid #e3e3e3;
+  font-size: 12px;
+  background-color: #fff;
+  color: #666;
+}
+
+.order-content .order-content-body .menu-item .amount-and-price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 18px;
+}
+
+.order-content .order-content-body .menu-item .amount-and-price .menu-price {
+  margin-top: 0;
+  font-size: 18px;
+}
+
+.order-content .order-content-body .menu-item .amount-and-price .amount-select {
+  margin: 0;
+}
+
+.order-content .order-content-body .menu-item .btn-delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 22px 18px;
+}
+
+.order-content .order-content-body .menu-item .btn-delete .ico-delete {
+  width: 14px;
+  opacity: 0.3;
+}
+
+.order-content .order-content-body .order-total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 18px;
+  padding: 24px 0;
+  border-top: 2px solid #d5dadd;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.order-content .order-content-body .order-total .total-txt {
+  font-size: 19px;
+}
+
+.order-content .order-content-body .order-total .total-price {
+  color: #ff3d3b;
+}
+
+.order-content .btn-menu-add {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 150px;
+  margin: 22px auto 38px;
+  line-height: 48px;
+  border-radius: 24px;
+  border: 1px solid #e5e5e5;
+  background-color: #fff;
+  color: #242424;
+  -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.04);
+          box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.04);
+}
+
+.order-content .btn-menu-add .ico-add {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 6px;
+  width: 13px;
+  height: 13px;
+  font-style: normal;
+}
+
+.order-content .btn-menu-add .ico-add::before {
+  content: '';
+  display: inline-block;
+  width: 13px;
+  height: 2px;
+  background-color: #01d760;
+}
+
+.order-content .btn-menu-add .ico-add::after {
+  content: '';
+  position: absolute;
+  display: inline-block;
+  width: 2px;
+  height: 13px;
+  background-color: #01d760;
+}
+
 .container {
+  min-height: 100vh;
+  background-color: #f4f7f9;
+}
+
+.container:not(.order) {
   padding-top: 94px;
   padding-bottom: 70px;
-  background-color: #f4f7f9;
 }
 
 .common-inner {
