--- a/assets/scss/abstracts/_mixin_common.scss
+++ b/assets/scss/abstracts/_mixin_common.scss
@@ -15,6 +15,7 @@
 }
 
 @mixin common-inner {
+  //중앙정렬을 나타냄 좌우 auto 이어야 하기 때문에 풀어서 써줌 
   margin-left: auto;
   margin-right: auto;
   max-width: 720px;
