--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -7,13 +7,13 @@
 
 @import "./components/header_area";
 @import "./components/menu_item";
+@import "./components/go_to_top";
 
 @import "./components/detail/menu_detail_area";
 @import "./components/detail/menu_review_area";
 @import "./components/detail/option_popup_area";
 
 
-@import "./components/menu/go_to_top";
 @import "./components/menu/order_info_area";
 @import "./components/menu/order_type";
 @import "./components/menu/recent_order_area";
@@ -22,5 +22,10 @@
 @import "./components/menu/order_box_area";
 @import "./components/amount_select";
 
-@import "./pages/order_page";
+@import "./components/order/order_form_area";
+@import "./components/order/order_content";
+@import "./components/order/order_content_extra";
+
+
+@import "./pages/common_page";
 
