--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -553,6 +553,88 @@ body.scroll-off {
           transform: translateX(-50%);
 }
 
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+}
+
+.modal-wrapper .modal-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: calc(100% - 32px);
+  max-width: 324px;
+  border-radius: 12px;
+  text-align: center;
+  background-color: #fff;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  overflow: hidden;
+  z-index: 10000;
+}
+
+.modal-wrapper .modal-content {
+  position: relative;
+  padding: 24px 30px;
+  color: #333;
+}
+
+.modal-wrapper .modal-content .btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 16px;
+}
+
+.modal-wrapper .modal-content .modal-icon {
+  opacity: 0.8;
+}
+
+.modal-wrapper .modal-content .modal-title {
+  margin-top: 8px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.modal-wrapper .modal-content .modal-desc {
+  margin-top: 8px;
+  color: #000;
+  letter-spacing: -0.3px;
+}
+
+.modal-wrapper .btn-area {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal-wrapper .btn-area button {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 16px 0;
+  font-size: 18px;
+}
+
+.modal-wrapper .btn-area .btn-cancel {
+  background-color: #edf1f4;
+  color: #333;
+}
+
+.modal-wrapper .btn-area .btn-confirm {
+  background-image: -webkit-gradient(linear, right top, left top, from(#3accff), to(#2cec88));
+  background-image: linear-gradient(to left, #3accff, #2cec88);
+  font-weight: 800;
+  color: #fff;
+}
+
 .menu-detail-area {
   background-color: #fff;
 }
@@ -1870,6 +1952,7 @@ body.scroll-off {
   font-weight: 700;
   color: #fff;
   background-image: linear-gradient(264deg, #3accff, #2cec88);
+  z-index: 1;
 }
 
 .order-form-area .page-title-area .btn-close {
@@ -1882,6 +1965,44 @@ body.scroll-off {
 
 .order-form-area .page-title-area .btn-close .ico-close {
   width: 18px;
+}
+
+.order-form-area .btn-order-area {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 720px;
+}
+
+.order-form-area .btn-order-area .btn-order {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 20px 18px 0;
+  width: calc(100% - 18px*2);
+  height: 50px;
+  font-size: 16px;
+  font-weight: 700;
+  border-radius: 5px;
+  background-color: #01d760;
+  color: #fff;
+}
+
+.order-form-area .btn-order-area .btn-order .ico-n-logo {
+  margin-right: 6px;
+  width: 18px;
+  height: 18px;
+}
+
+.order-form-area .go-to-top {
+  padding: 26px 0;
+  background: none;
 }
 
 .order-content {
@@ -2213,6 +2334,111 @@ body.scroll-off {
   background-color: #fff;
   font-size: 15px;
   color: #242424;
+}
+
+.order-content-extra .place-map-area {
+  margin-top: 2px;
+  padding-bottom: 0;
+}
+
+.order-content-extra .place-map-area .map-area {
+  margin-top: 10px;
+  border-radius: 5px;
+  background-color: #fafbfc;
+  overflow: hidden;
+}
+
+.order-content-extra .place-map-area .place-address-box {
+  padding: 10px 14px;
+  font-size: 14px;
+}
+
+.order-content-extra .place-map-area .place-name {
+  font-size: 15px;
+  font-weight: 600;
+  color: #242424;
+}
+
+.order-content-extra .place-map-area .place-address {
+  margin-top: 4px;
+  color: #666;
+}
+
+.order-content-extra .place-map-area .place-address-detail {
+  margin-top: 8px;
+  color: #006f49;
+}
+
+.order-content-extra .place-map-area .img-map {
+  display: block;
+  width: 100%;
+  border-top: 1px solid #e9eef0;
+}
+
+.order-content-extra .agreement-area .agreement-list {
+  margin-top: 10px;
+  border: 1px solid #d5dadd;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.order-content-extra .agreement-area .agreement-item:not(:first-child) {
+  border-top: 1px solid #ecf0f2;
+}
+
+.order-content-extra .agreement-area .agreement-item.is-open .agreement-content {
+  display: block;
+}
+
+.order-content-extra .agreement-area .agreement-item.is-open .btn-toggle {
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+}
+
+.order-content-extra .agreement-area .agreement-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 12px;
+  height: 44px;
+  color: #242424;
+}
+
+.order-content-extra .agreement-area .txt {
+  font-size: 15px;
+}
+
+.order-content-extra .agreement-area .btn-toggle {
+  width: 44px;
+  height: 100%;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.order-content-extra .agreement-area .agreement-content {
+  display: none;
+  padding: 12px;
+  max-height: 194px;
+  border-top: 1px solid #ecf0f2;
+  font-size: 14px;
+  color: #666;
+  overflow-y: auto;
+}
+
+.order-content-extra .agreement-area .agreement-info-txt {
+  margin-top: 14px;
+  padding-left: 8px;
+  border-left: 3px solid #efefef;
+  font-size: 14px;
+  line-height: 1.6;
+  letter-spacing: -0.45px;
+  color: #666;
 }
 
 .container {
