--- a/assets/scss/components/order/_order_form_area.scss
+++ b/assets/scss/components/order/_order_form_area.scss
@@ -16,6 +16,7 @@
       font-weight: 700;
       color: #fff;
       background-image: linear-gradient(264deg,#3accff, #2cec88);
+      z-index: 1;
     }
 
     .btn-close {
@@ -28,5 +29,35 @@
         width: 18px;
       }
     }
+  }
+
+  .btn-order-area{
+    margin-top: 20px;
+    @include common-inner;
+
+    .btn-order {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 20px $m-padding 0;
+      width: calc(100% - #{$m-padding}*2);
+      height: 50px;
+      font-size: 16px;
+      font-weight: 700;
+      border-radius: 5px;
+      background-color: $green;
+      color: #fff;
+
+      .ico-n-logo {
+        margin-right: 6px;
+        width: 18px;
+        height: 18px;
+      }
+    }
+  }
+
+  .go-to-top {
+    padding: 26px 0;
+    background: none;
   }
 }
