--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -8,6 +8,7 @@
 @import "./components/header_area";
 @import "./components/menu_item";
 @import "./components/go_to_top";
+@import "./components/modal";
 
 @import "./components/detail/menu_detail_area";
 @import "./components/detail/menu_review_area";
