--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -801,11 +801,11 @@ body.scroll-off {
   background-color: #e7e7e7;
 }
 
-.menu-detail-area .order-type-area .type-amuont {
+.menu-detail-area .order-type-area .type-amount {
   margin-top: 20px;
 }
 
-.menu-detail-area .order-type-area .type-amuont .title {
+.menu-detail-area .order-type-area .type-amount .title {
   font-size: 14px;
   font-weight: 700;
   letter-spacing: -0.3px;
@@ -1003,9 +1003,30 @@ body.scroll-off {
   left: 0;
   right: 0;
   width: 100%;
-  height: 100%;
+  height: 0;
   overflow: hidden;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+  z-index: 1;
+}
+
+.option-popup-area.show {
+  height: 100%;
   z-index: 5000;
+}
+
+.option-popup-area.show .dimmed-layer {
+  opacity: 1;
+}
+
+.option-popup-area.show .menu-option-popup {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.option-popup-area .dimmed-layer {
+  position: absolute;
+  opacity: 0;
 }
 
 .option-popup-area .menu-option-popup {
@@ -1022,6 +1043,12 @@ body.scroll-off {
   max-height: calc(100% - 45px);
   background-color: #f4f7f9;
   z-index: 100000;
+  -webkit-transform: translateY(110%);
+          transform: translateY(110%);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 
 .option-popup-area .content-top-pattern {
@@ -1030,6 +1057,7 @@ body.scroll-off {
   width: 100%;
   height: 11px;
   fill: white;
+  z-index: 2;
 }
 
 .option-popup-area .content-top {
@@ -1102,7 +1130,7 @@ body.scroll-off {
   color: #fff;
 }
 
-.option-popup-area .content-top .menu-name .amount-select {
+.option-popup-area .content-top .amount-select {
   margin-top: 12px;
 }
 
@@ -1412,7 +1440,7 @@ body.scroll-off {
   border-radius: 16px 16px 0 0;
   background-color: #e9ecef;
   text-align: center;
-  z-index: 10000;
+  z-index: 1000000;
 }
 
 .order-type-popup .title {
@@ -1421,7 +1449,7 @@ body.scroll-off {
   color: #000;
 }
 
-.order-type-popup type-list {
+.order-type-popup .type-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1597,7 +1625,7 @@ body.scroll-off {
   top: 94px;
   margin-top: 10px;
   background-color: white;
-  z-index: 100000;
+  z-index: 1000;
 }
 
 .menu-category-area .common-inner {
@@ -1728,6 +1756,14 @@ body.scroll-off {
   font-weight: 700;
   color: #000;
   letter-spacing: -0.3px;
+}
+
+.menu-list-area .btn-toggle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: -16px;
+  padding: 16px;
 }
 
 .menu-list-area .period {
@@ -2474,7 +2510,14 @@ body.scroll-off {
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
+  opacity: 1;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
   z-index: 9999;
+}
+
+.dimmed-layer.hidden {
+  opacity: 0;
 }
 
 .dimmed-layer.light {
