--- a/assets/scss/components/detail/_option_popup_area.scss
+++ b/assets/scss/components/detail/_option_popup_area.scss
@@ -4,9 +4,25 @@
   left: 0;
   right: 0;
   width: 100%;
-  height: 100%;
+  height: 0;
   overflow: hidden;
-  z-index: 5000;
+  transition: opacity 0.3s ease;
+  z-index: 1;
+  &.show {
+    height: 100%;
+    z-index: 5000;
+    .dimmed-layer {
+      opacity: 1;
+    }
+    .menu-option-popup {
+      transform: translateY(0);
+    }
+  }
+
+  .dimmed-layer {
+    position: absolute;
+    opacity: 0;
+  }
 
   .menu-option-popup {
     position: fixed;
@@ -17,6 +33,8 @@
     max-height: calc(100% - 45px);
     background-color: $booking-color-border151;
     z-index: 100000;
+    transform: translateY(110%); // 자기가 갖고있는 값 110만큼 내려가있음 - 100으로 했을때 패턴이 보여서 아예 110으로 빼줌
+    transition: transform 0.3s ease;
   }
 
   .content-top-pattern {
@@ -25,6 +43,7 @@
     width: 100%;
     height: 11px;
     fill: white;
+    z-index: 2;
   }
 
   .content-top {
@@ -79,9 +98,9 @@
         background-color: rgb(33, 33, 33);
         color: #fff;
       }
-      .amount-select {
-        margin-top: 12px;
-      }
+    }
+    .amount-select {
+      margin-top: 12px;
     }
 
     .btn-close {
