--- a/assets/scss/components/menu/_order_type.scss
+++ b/assets/scss/components/menu/_order_type.scss
@@ -1,5 +1,3 @@
-
-
 .order-type-popup {
   position: fixed;
   bottom: 0;
@@ -9,14 +7,14 @@
   border-radius: 16px 16px 0 0;
   background-color: $booking-color-bg1;
   text-align: center;
-  z-index: 10000;
+  z-index: 1000000;
   
   .title{
     font-size: 20px;
     font-weight: 700;
     color: $booking-color-text1;
   }
-  type-list {
+  .type-list {
     display: flex;
     margin-top: 32px;
   }
