--- a/coupang/Mission-04/stylesheets/pages/header.css
+++ b/coupang/Mission-04/stylesheets/pages/header.css
@@ -1,1 +1,239 @@
 /* 헤더 */
+/* 헤더 */
+/* 헤더 */
+header {
+  width: 100%;
+}
+
+
+.login-navigation {
+  height: 34px;
+  display: flex;
+  background-color: var(--color-gray-100);
+
+}
+
+.login-bar {
+  width: 1020px;
+  height: 24px;
+  list-style: none;
+  display: flex;
+  align-items: center ;
+  margin: 5px 5px;
+}
+
+.login-item {
+  padding: 5px 8px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.logo-title{
+  background-image: url(/assets/logo/logo.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 176px;
+  height: 40px;
+}
+
+.header-grid {
+  height: 116px;
+  /* display: grid; */
+}
+
+.button--category {
+  position: relative;
+  width: 110px;
+  height: 116px;
+  background-color: var(--color-blue-600);
+  border: none;
+  color: var(--color-white);
+}
+
+.button--category span {
+  position: absolute;
+  bottom: 25.86%;
+  left: 29.55%;
+  font-size: 12px;
+  line-height: 1.2;
+  font-weight: 400;
+}
+
+.button--category::after {
+  position: absolute;
+  right: 36.36%;
+  top: 25.86%;
+  content: '';
+  display: block;
+  background-image: url(/assets/icon/hamburger.svg);
+  width: 30px;
+  height: 30px;
+  margin-bottom: 12px;
+}
+
+select {
+  -moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+}
+
+.main-search-area {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.form {
+  width: 516px;
+  height: 40px;
+  border: 1px solid var(--color-blue-600);
+}
+
+.select-category {
+  height: 38px;
+  border-right: 1px solid var(--color-gray-100);
+
+}
+
+.select-category-button {
+  width: 135px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.select-category-title {
+  padding: 13px 59px 13px 12px;
+  color: var(--color-gray-700);
+  font-size: 12px;
+  line-height: 1.2;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.select-category-svg {
+  display: block;
+  height: 6px;
+  margin-right: 16px;
+}
+ 
+ .site-search-input{
+   display: flex;
+  width: 301px;
+ }
+
+ #site-search::placeholder{
+   width: inherit;
+   height: 14px;
+   font-size: 12px;
+   line-height: 1.2;
+   color: var(--color-gray-600);
+  }
+
+  #site-search{
+   width: 301px;
+   height: auto;
+   font-size: 13px;
+   border: 0;
+   outline: none;
+   padding: 0;
+   padding-left: 10px;
+ }
+
+.search-btn-group {
+position: absolute;
+top: 4px;
+right: 0px;
+
+ }
+
+.search-btn {
+  width: 30px;
+  height: 30px;
+   border: none;
+   outline: none;
+   background-color: var(--color-white);
+ }
+
+.search-btn.micro {
+  display: inline-block;
+  background-image: url(/assets/icon/mic.svg);
+  background-repeat: no-repeat;
+  margin-right: 0;
+ }
+
+ .search-btn.keyword {
+   display: inline-block;
+   background-image: url(/assets/icon/search.svg);
+   background-repeat: no-repeat;
+   background-size: contain; 
+ }
+
+ .myCoupang {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+ }
+
+ .myCoupang-title {
+  width: 90px;
+  height: 58px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background-color: var(--color-white);
+ }
+
+ .myCoupang-ico {
+   width: 27.99px;
+   height: 26.83px;
+   background-image: url(/assets/icon/my-coupang.svg);
+   background-repeat: no-repeat;
+   background-size: contain;
+   border: 0;
+ }
+ .myCoupang-title .title  {
+  font-size: 12px;
+  line-height: 1.5;
+  margin-top: 6.75px;
+ }
+
+ .myCoupang-list {
+   position: relative;
+  list-style: none;
+  width: 90px;
+  background-color: var(--color-white);
+  border:1px solid var(--color-gray-300);
+  font-size: 12px;
+  line-height: 1.2;
+  padding: 24px 19px;
+ }
+
+
+ .myCoupang-item {
+  margin-top: 20px;
+ }
+
+ .myCoupang-item:first-child{
+   margin-top: 0;
+ }
+
+ .myCoupang-list::after {
+   content: '';
+   top: -5.5px;
+   left: 42%;
+   position: absolute;
+  width: 10px;
+  height: 10px;
+  border: 1px solid var(--color-gray-300);
+  border-width: 1px 0 0 1px;
+  background-color: var(--color-white);
+  transform: rotate(45deg);
+
+ }
+
