--- a/coupang/Mission-05/stylesheets/pages/template.css
+++ b/coupang/Mission-05/stylesheets/pages/template.css
@@ -1,11 +1,131 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+}
+
 /* ---------------------------------------------- */
 /* 헤더                                            */
 /* ---------------------------------------------- */
+.header {
+  width: 100%;
+  border-bottom: 1px solid var(--color-gray-100);
+}
 
+.button--category {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 110px;
+  height: 116px;
+  background-color: var(--color-blue-600);
+  color: var(--color-white);
+  border: none;
+  text-align: center;
+}
+.button--category span {
+  font-size: 12px;
+  line-height: 1.2;
+  margin-top: 12px;
+
+}
 
 /* ---------------------------------------------- */
 /* 내비게이션                                        */
 /* ---------------------------------------------- */
+
+.navigation__inner {
+  font-size: 12px;
+  line-height: 1.2;
+  width: 540px;
+  height: auto;
+  min-height: 500px;
+  border: 1px solid var(--color-gray-100);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  text-align: left;
+}
+
+.navigation__list {
+  list-style: none;
+  padding: 10px 5px;
+
+}
+
+.first-depth-item {
+  position: relative;  
+  width: 170px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.first-depth-item img {
+  width: 20px;
+  height: 20px;
+  margin-right: 4px;
+  vertical-align: middle;
+}
+
+.navigation__list li>a {
+  padding: 5px 54px 5px 20px;
+  display: flex;
+  align-items: center;
+}
+
+.depth {
+  position: absolute;
+  top: -10px;
+  left: 180px;
+  height: 100%;
+  min-height: 500px;
+  z-index: 2;
+}
+
+.depth-list ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 10px;
+}
+
+.second-depth-list a {
+  width: 170px;
+  height: 30px;
+}
+
+.third-depth-list {
+  position: absolute;
+  top: 0;
+  left: 180px;
+}
+
+.third-depth-list a[role="button"] {
+  display: none;
+}
+
+.depth::after{
+  content: '';
+  position: absolute;
+  box-shadow: 1.5px 0px 2px rgba(0, 0, 0, 0.25);
+  bottom: 0px;
+  width: 1px;
+  height: 500px;
+  background-color: var(--color-white);
+}
+
+.third-depth-list::after{
+  content: '';
+  position: absolute;
+  box-shadow: 1.5px 0px 2px rgba(0, 0, 0, 0.25);
+  bottom: -400px;
+  width: 1px;
+  height: 500px;
+  background-color: var(--color-white);
+
+}
+
+
+
+
 
 
 /* ---------------------------------------------- */
